Fix a few bugs and add more settings
- Add a quick fix for the index bug
- Adjust the parameter for Schism
- Add a property to control the start time of the migration
- Update some debug information
- Fix a bug in MigrationAnalysisProc
- Ignore fully replicated record (for TPC-C) in WorkloadMonitor